Atualizando os arquivos

--- a/exercicio.html
+++ b/exercicio.html
@@ -3,184 +3,92 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Index.html</title>
+  <title>exercicio.html</title>
   <link rel="stylesheet" href="./css/styleDesktop.css">
 </head>
 
 <body>
   <div id="principal"><!--Inicio do Principal-->
 
-    <div class="banner"><!--Inicio do Banner-->
-      <div id="topo"><!--Inicio do Topo-->
-        <div id="logo">
-          <div class="class-logo-img"><img src="./imagens/Ef-logo-branca.png" alt=""></div>
-          <div class="class-logo-nome"><a class="link-titulo-branco" href="index.html">NOME DO SITE</a></div>
-        </div>
-        <nav id="nav">
-          <ul id="menu-topo">
-            <li><a class="class-btn-Menu" href="/">+ BUSCADOS</a></li>
-            <li><a class="class-btn-Menu" href="/">NOVOS EXERCÍCIOS</a></li>
-            <li><a class="class-btn-Menu" href="/">SUGESTÕES</a></li>
-          </ul>
-        </nav>
-        <div class="menu-por">
-          <div class="menu-por-descricao">POR</div>
-          <div><img src="./imagens/image 2.png" alt=""></div>          
-        </div>        
-
-      </div><!--Fim do Topo-->
-
-      <img src="./imagens/Capa.jpg" class="img-banner">
-      <div class="class-topo1">EXERCÍCIOS FÍSICOS GRÁTIS</div>
-      <div class="class-topo2">Conheça mais de 400 exercícios para adicionar a sua rotina.</div>
-      <div id="busca">
-        <div id="divBusca">
-          <input type="text" id="txtBusca" placeholder="Pesquise o exercício desejado aqui" />
-          <img src="./imagens/lupa.png" alt="Buscar..." id="btnBusca" />
-        </div>
-      </div>
-    </div>
-    <!--Fim do Banner-->
-
-    <div id="menu-principal">
-      <!--Inicio do menu-->
-      <nav id="menu-centro">
-        <ul id="menu-topo">
-          <li>
-            <div class="class-botao-Menu">
-              <div class="class-btn-redondo"><img class="img-botao-icones" src="./imagens/directions_run.png" alt="">
-              </div>
-              <a class="class-btn-redondo-Label" href="/">Musculação</a>
-            </div>
-          </li>
-
-          <li>
-            <div class="class-botao-Menu">
-              <div class="class-btn-redondo"><img class="img-botao-icones" src="./imagens/directions_run.png" alt="">
-              </div>
-              <a class="class-btn-redondo-Label" href="/">Crossfit</a>
-            </div>
-          </li>
-
-          <li>
-            <div class="class-botao-Menu">
-              <div class="class-btn-redondo"><img class="img-botao-icones" src="./imagens/directions_run.png" alt="">
-              </div>
-              <a class="class-btn-redondo-Label" href="/">Funcional</a>
-            </div>
-          </li>
-
-          <li>
-            <div class="class-botao-Menu">
-              <div class="class-btn-redondo"><img class="img-botao-icones" src="./imagens/directions_run.png" alt="">
-              </div>
-              <a class="class-btn-redondo-Label" href="/">Aeróbico</a>
-            </div>
-          </li>
-
-          <li>
-            <div class="class-botao-Menu">
-              <div class="class-btn-redondo"><img class="img-botao-icones" src="./imagens/directions_run.png" alt="">
-              </div>
-              <a class="class-btn-redondo-Label" href="/">Alongamento</a>
-            </div>
-          </li>
-
-          <li>
-            <div class="class-botao-Menu">
-              <div class="class-btn-redondo"><img class="img-botao-icones" src="./imagens/directions_run.png" alt="">
-              </div>
-              <a class="class-btn-redondo-Label" href="/">Aquecimento</a>
-            </div>
-          </li>
-
-          <li>
-            <div class="class-botao-Menu">
-              <div class="class-btn-redondo"><img class="img-botao-icones" src="./imagens/directions_run.png" alt="">
-              </div>
-              <a class="class-btn-redondo-Label" href="/">400+</a>
-            </div>
-          </li>
-        </ul>
-      </nav>
-    </div>
-    <!--Fim do Menu-->
-
     <div id="conteudo"><!--Início do conteudo-->
-      <div class="class-bloco-titulo">Últimos adicionados</div>
-      <div id="bloco-sessao">
-        <div class="class-bloco-exercicio" href="contato.html">
-          <ul>
-            <li>
-              <div class="class-bloco-tag">Novo</div>
-              <div class="class-bloco-img"><img src="./imagens/gif.png"></div>
-              <div class="class-bloco-NomeExercicio"><a href="exercicio.html">Supino reto com halteres</a></div>
-              <div id="bloco-rodape">
-                <a class="class-bloco-musculo">Deltoide</a>
-                <a class="class-bloco-musculo">Tríceps Braquial</a>
-                <a class="class-bloco-musculo">Peitoral </a>
-              </div>
-            </li>
-          </ul>
-        </div>
+      <div class="banner-branco"><!--Inicio do Banner-->
+        <div id="topo-branco"><!--Inicio do Topo-->
+          <div id="logo">
+            <div class="class-logo-img"><img src="./imagens/Ef-logo-azul 1.png" alt=""></div>
+            <div class="class-logo-nome"><a class="link-titulo-preto" href="index.html">NOME DO SITE</a></div>
+          </div>
+          <nav id="nav-branco">
+            <ul id="menu-topo">
+              <li><a class="class-btn-Menu-preto" href="/">+ BUSCADOS</a></li>
+              <li><a class="class-btn-Menu-preto" href="/">APARELHOS</a></li>
+              <li><a class="class-btn-Menu-preto" href="/">GRUPOS MUSCULARES</a></li>
+              <li><a class="class-btn-Menu-preto" href="/">NOVOS EXERCÍCIOS</a></li>
+              <li><a class="class-btn-Menu-preto" href="/">SUGESTÕES</a></li>                        
+            </ul>
+          </nav>
+        </div><!--Fim do Topo-->
+      </div><!--Fim do Banner-->
 
-        <div class="class-bloco-exercicio">
-          <ul>
-            <li>
-              <div class="class-bloco-tag">Novo</div>
-              <div class="class-bloco-img"><img src="./imagens/gif.png"></div>
-              <div class="class-bloco-NomeExercicio">Remada cavalinho</div>
-              <div id="bloco-rodape">
-                <a class="class-bloco-musculo">Bíceps Braquial</a>
-                <a class="class-bloco-musculo">Trapézio</a>
-              </div>
-            </li>
-          </ul>
-        </div>
-
-        <div class="class-bloco-exercicio">
-          <ul>
-            <li>
-              <div class="class-bloco-tag">Novo</div>
-              <div class="class-bloco-img"><img src="./imagens/gif.png"></div>
-              <div class="class-bloco-NomeExercicio">Abdominal na prancha</div>
-              <div id="bloco-rodape">
-                <a class="class-bloco-musculo">Reto do Abdome</a>
-              </div>
-            </li>
-          </ul>
-        </div>
-
-        <div class="class-bloco-exercicio">
-          <ul>
-            <li>
-              <div class="class-bloco-tag">Novo</div>
-              <div class="class-bloco-img"><img src="./imagens/gif.png"></div>
-              <div class="class-bloco-NomeExercicio">Crucifixo no cross</div>
-              <div id="bloco-rodape">
-                <a class="class-bloco-musculo">Deltoide</a>
-                <a class="class-bloco-musculo">Trapézio</a>
-                <a class="class-bloco-musculo">Romboide</a>
-              </div>
-            </li>
-          </ul>
-        </div>
-
-        <div class="class-bloco-exercicio">
-          <ul>
-            <li>
-              <div class="class-bloco-tag">Novo</div>
-              <div class="class-bloco-img"><img src="./imagens/gif.png"></div>
-              <div class="class-bloco-NomeExercicio">Levantamento terra</div>
-              <div id="bloco-rodape">
-                <a class="class-bloco-musculo">Sóleo</a>
-                <a class="class-bloco-musculo">Bíceps Femoral</a>
-                <a class="class-bloco-musculo">Glúteo </a>
-              </div>
-            </li>
+      <div id="cabecalho-pagina">
+        <div id="cabecalho-pagina-centro">
+          <ul id="cabecalho-itens">
+            <li><div class="cabecalho-tipo">Musculação</div></li>
+            <li><div class="cabecalho-seta-maior" href="/">></div></li>
+            <li><div><a class="cabecalho-musculo" href="/">Peito</a></div></li>
+            <li><div class="cabecalho-seta-voltar" href="/"><img src="./imagens/icone-voltar.png" alt=""></div></li>
+            <li><div><a class="cabecalho-voltar" href="/">Voltar</a></div></li>                        
           </ul>
         </div>
       </div>
+
+
+      <div id="descricao-exercicio">
+        <div class="descricao-direita">
+          <div id="descricao-itens">
+            <div class="descricao-titulo">Supino reto na barra</div>
+            <div class="descricao-descricao">Exercício para fortalecimento e hipertrofia da regiao abdominal, reto abdominal com enfoque na parte supra. Indicado a praticante de musculação nível iniciante e intermediário.</div>
+
+            <div class="descricao-lista-group">
+              <div id="descricao-lista-itens">
+                <div class="descricao-redondo"><img class="descricao-img" src="./imagens/icone-exer-azul.png"></div>
+                <div class="descricao-sub-preto">Tipo</div>
+                <div class="descricao-sub-azul">Musculação</div>                
+              </div>   
+              
+              <div id="descricao-lista-itens">
+                <div class="descricao-redondo"><img class="descricao-img" src="./imagens/icone-exer-azul.png"></div>
+                <div class="descricao-sub-preto">Grupo Muscular</div>
+                <div class="descricao-sub-azul">Peitoral</div>                
+              </div>  
+            </div> 
+
+            <div class="descricao-lista-group">
+              <div id="descricao-lista-itens">
+                <div class="descricao-redondo"><img class="descricao-img" src="./imagens/icone-exer-azul.png"></div>
+                <div class="descricao-sub-preto">Aparelho</div>
+                <div class="descricao-sub-azul">Banco de Supino</div>                
+              </div>      
+              <div id="descricao-lista-itens">
+                <div class="descricao-redondo"><img class="descricao-img" src="./imagens/icone-exer-azul.png"></div>
+                <div class="descricao-sub-preto">Musculos</div>
+                <div class="descricao-sub-azul">Peito, Costas, Perna</div>                
+              </div>                                  
+            </div>        
+
+            <div class="descricao-subtitulo">Como realizar</div>
+            <div class="descricao-como-realizar">
+              <ol class="descricao-como-realizar-itens">
+                <li>Deite sobre um colchonete;</li>
+                <li>Manter os joelhos flexionados, pés ligeiramente separados;</li>
+                <li>Coloque as mãos entrelaçadas atrás do pescoço;</li>
+                <li>Inspire e eleve os ombros em direção ao joelho;</li>
+                <li>Expire lentamente e retorne á posição inicial.</li>
+              </ol>
+            </div>
+          </div>
+        </div>
+      </div>
+     
 
       <div id="exercicios-relevantes"><!--Início do exercícios relevantes-->
         <div id="titulo-exercicios-relevantes">Exercícios mais relevantes</div>
@@ -269,7 +177,7 @@
         </div>
       </div><!--Fim do exercícios relevantes-->
 
-      <div class="traco-azul-claro"></div>
+
 
       <div class="exercicios-grupo-muscular">
         <div class="class-bloco-titulo">Exercícios por grupo muscular</div>
@@ -295,7 +203,6 @@
           </div>           
         </div>
       </div>      
-
     </div><!--Fim do conteudo-->
 
     <div id="rodape"><!--Inicio do rodape-->
