--- a/exercicio.html
+++ b/exercicio.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>exercicio.html</title>
+  <title>exercícios.html</title>
   <link rel="stylesheet" href="./css/styleDesktop.css">
 </head>
 
@@ -41,9 +41,8 @@
         </div>
       </div>
 
-
       <div id="descricao-exercicio">
-        <div class="descricao-direita">
+        <div class="descricao-esquerda">
           <div id="descricao-itens">
             <div class="descricao-titulo">Supino reto na barra</div>
             <div class="descricao-descricao">Exercício para fortalecimento e hipertrofia da regiao abdominal, reto abdominal com enfoque na parte supra. Indicado a praticante de musculação nível iniciante e intermediário.</div>
@@ -87,8 +86,10 @@
             </div>
           </div>
         </div>
+        <div id="traco-divisor"></div>
       </div>
-     
+
+      <div class="traco-azul-claro"></div>     
 
       <div id="exercicios-relevantes"><!--Início do exercícios relevantes-->
         <div id="titulo-exercicios-relevantes">Exercícios mais relevantes</div>
@@ -177,7 +178,7 @@
         </div>
       </div><!--Fim do exercícios relevantes-->
 
-
+      <div class="traco-azul-claro"></div>   
 
       <div class="exercicios-grupo-muscular">
         <div class="class-bloco-titulo">Exercícios por grupo muscular</div>
